style: fix buttons behind background and add effect

--- a/src/Arrows.css
+++ b/src/Arrows.css
@@ -32,6 +32,7 @@
 }
 
 .arrow-buttons {
+position: relative;
 padding: 10px;
 width: 53px;
 height: 53px;
@@ -40,4 +41,18 @@ background: #26262C;
 border: 1px solid #000000;
 box-sizing: border-box;
 border-radius: 5px;
+cursor: pointer;
+z-index: 1;
 }
+
+.arrow-buttons:hover {
+  
+  background: #26262C50;
+  border: 1px solid #C4C4C4;
+  }
+
+  .arrow-buttons:active {
+    transform: translate(1px, 1px);
+    transition: transform 0.1s;
+    background: #C4C4C440;
+  }
